// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactDeviceDetection should decorate wrapped component by props with requested in HOC config device/browser information 1`] = `
<FakeComponent
  isChrome={false}
  isFirefox={false}
  isIE={false}
  isMobile={false}
  otherProp={20}
/>
`;

exports[`reactDeviceDetection should decorate wrapper component and pass only requested props 1`] = `
<FakeComponent
  isMobile={false}
  otherProp={20}
/>
`;
